traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: not found: value Direct
    if (isFacingWall() && getDirection==Direct.EAST) {
                                        ^